# mllm-public

./: .gitignore  ARXIV_CHECKLIST_VERIFICATION.md  ARXIV_PUSH_READY_CERTIFICATION.txt  CITATION.cff  FINAL_VERIFICATION_REPORT.txt  HARDENING_REPORT.md  LICENSE  MLLM_HPCA_ORG.ipynb  README.md  default-profile.json  mllm-pipeline.py  pyproject.toml
config/: default-profile.json
demo/: README.md  run_demo.py
demo/expected_output/: aggregated_scores.csv  consensus_summary.csv  consensus_summary.json
demo/sample_input/: DemoStudyA_demo-model-alpha_eval.json  DemoStudyA_demo-model-beta_eval.json  DemoStudyB_demo-model-alpha_eval.json  raw_model_output_example.txt
docs/: MANUSCRIPT_MAPPING.md  MODELS_AND_RUNTIME.md  NATURE_COMPLIANCE_REPORT.md  REPRODUCIBILITY.md  TESTED_ENVIRONMENTS.md
docs/examples/: engine-status.example.md
docs/runtime/: LMS_HARDENING_GUIDE.md
examples/: MLLM_HPCA_ORG.ipynb  README.md  hpc_table_final.csv
scripts/: mllm_status.sh  overnight_hpc_queue_definitive.sh  overnight_hpc_queue_refined.sh  overnight_queue.sh  sovereign_embedder.py  trigger_pending_remote.sh  trigger_remote_pipeline.sh
scripts/maintenance/: update_profiles.py
src/: mllm-visualization.py
src/mllm/: prompts.py  schemas.py
src/mllm/config/: profiles.py  study_config.py
src/mllm/data/: compressor.py  context_compressor.py  loaders.py  preprocessors.py
tests/: conftest.py
tests/integration/: test_hpc_eval.py
tests/unit/: test_config.py  test_llm_wrapper.py  test_mlx_load.py  test_operators.py  test_preprocessors.py  test_prompts.py  test_schemas.py
(+106 files in other folders)
