[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mllm"
version = "1.0.1"
authors = [
  { name="Hamed Nejat" },
]
description = "Ontology-constrained multi-LLM evidence-mapping pipeline for predictive-processing literature synthesis."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "click>=8.0.0",
    "requests>=2.25.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "PyYAML>=6.0",
    "tqdm>=4.60.0",
    "PyMuPDF",
    "Pillow",
    "openai",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
viz = [
    "plotly>=5.0.0",
    "scipy>=1.7.0",
    "kaleido",
]

[project.scripts]
deepread = "mllm.deepread.cli:main"


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/mllm/deepread/tests"]
markers = [
    "integration: tests requiring configured external services",
    "hardware: hardware-specific or local-engine tests",
]
addopts = "-m 'not integration and not hardware'"
